--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sukeos-ui",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "sukeos ui",
   "main": "index.js",
   "scripts": {
@@ -21,8 +21,17 @@
   },
   "homepage": "https://github.com/zspzhong/sukeos-ui#readme",
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
-    "gulp-plumber": "^1.2.0"
+    "gulp-plumber": "^1.2.0",
+    "gulp-webpack": "^1.5.0",
+    "vue": "^2.2.6",
+    "vue-loader": "^15.4.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
